deploy/fracture/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fracture-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fracture-api
  template:
    metadata:
      labels:
        app: fracture-api
    spec:
      containers:
        - name: fracture-api
          image: 'appademin/fracture-api:0.0.4'
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
              name: web
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: fracture-api-service
spec:
  selector:
    app: fracture-api
  ports:
    - protocol: TCP
      port: 4000
