deploy/fracture/api-puff-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: fracture-puff-api
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  host: fracture-puff-api.prod.appadem.in
  to:
    kind: Service
    name: fracture-puff-api-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
