deploy/fracture/api-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: fracture-api
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  host: fracture-api.prod.appadem.in
  to:
    kind: Service
    name: fracture-api-service
    weight: 100
  port:
    targetPort: 4000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
